# TDOM-test

./: vcpkg.json
Apps/: CMakeLists.txt
Apps/DemoApp/: CMakeLists.txt  main.cpp
Apps/ShapeDetection/: CMakeLists.txt  main.cpp
Apps/Simplify/: CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt
